ShenandoahControlThread missing from hs-err log and thread dump

XMLWordPrintable

    • gc
    • b15

        Reported by asmehra@redhat.com:

        While working on another issue I noticed hs_err log file is missing "ShenandoahControlThread" in the dumped thread list.
        As an example, threads from a hs_err dump:

        Java Threads: ( => current thread )
          0x00007ff18c0986b0 JavaThread "main" [_thread_blocked, id=231505, stack(0x00007ff1938c2000,0x00007ff1939c3000)]
          0x00007ff18c1fded0 JavaThread "Reference Handler" daemon [_thread_blocked, id=231513, stack(0x00007ff1723fc000,0x00007ff1724fd000)]
          0x00007ff18c1ff910 JavaThread "Finalizer" daemon [_thread_blocked, id=231514, stack(0x00007ff1722fb000,0x00007ff1723fc000)]
          0x00007ff18c2018a0 JavaThread "Signal Dispatcher" daemon [_thread_blocked, id=231515, stack(0x00007ff1721fa000,0x00007ff1722fb000)]
          0x00007ff18c2031f0 JavaThread "Service Thread" daemon [_thread_blocked, id=231517, stack(0x00007ff171ff7000,0x00007ff1720f8000)]
          0x00007ff18c204b40 JavaThread "Monitor Deflation Thread" daemon [_thread_blocked, id=231518, stack(0x00007ff171ef6000,0x00007ff171ff7000)]
          0x00007ff18c2069f0 JavaThread "C2 CompilerThread0" daemon [_thread_blocked, id=231519, stack(0x00007ff171df5000,0x00007ff171ef6000)]
          0x00007ff18c208490 JavaThread "C1 CompilerThread0" daemon [_thread_blocked, id=231520, stack(0x00007ff171cf4000,0x00007ff171df5000)]
          0x00007ff18c211e10 JavaThread "Sweeper thread" daemon [_thread_blocked, id=231521, stack(0x00007ff171bf3000,0x00007ff171cf4000)]
          0x00007ff18c28b810 JavaThread "Common-Cleaner" daemon [_thread_blocked, id=231524, stack(0x00007ff1718ee000,0x00007ff1719ef000)]
          0x00007ff18c2e6a00 JavaThread "Notification Thread" daemon [_thread_blocked, id=231525, stack(0x00007ff1717ed000,0x00007ff1718ee000)]
          0x00007ff18c35de20 JavaThread "MainThread" [_thread_blocked, id=231527, stack(0x00007ff170fc1000,0x00007ff1710c2000)] _threads_hazard_ptr=0x00007ff0f402d1b0, _nested_threads_hazard_ptr_cnt=0
          0x00007ff0f402c0e0 JavaThread "MyThread" daemon [_thread_blocked, id=231528, stack(0x00007ff170ab4000,0x00007ff170bb5000)]

        Other Threads:
        =>0x00007ff18c1cb090 VMThread "VM Thread" [stack: 0x00007ff1724ff000,0x00007ff1725ff000] [id=231512]
          0x00007ff18c2e8bf0 WatcherThread "VM Periodic Task Thread" [stack: 0x00007ff1716ed000,0x00007ff1717ed000] [id=231526]
          0x00007ff18c0b4e90 WorkerThread "Shenandoah GC Threads#0" [stack: 0x00007ff172fb3000,0x00007ff1730b3000] [id=231506]
          0x00007ff168000cc0 WorkerThread "Shenandoah GC Threads#1" [stack: 0x00007ff1720fa000,0x00007ff1721fa000] [id=231516]
          0x00007ff13c000d20 WorkerThread "Shenandoah GC Threads#2" [stack: 0x00007ff171af3000,0x00007ff171bf3000] [id=231522]
          0x00007ff13c001db0 WorkerThread "Shenandoah GC Threads#3" [stack: 0x00007ff1719f1000,0x00007ff171af1000] [id=231523]
          0x00007ff18c0b5b80 WorkerThread "Safepoint Cleanup Thread#0" [stack: 0x00007ff172eb1000,0x00007ff172fb1000] [id=231507]

        "ShenandoahControlThread" should appear under "Other Threads" along with other "Shenandoah GC Threads".

              Assignee:
              Aleksey Shipilev
              Reporter:
              Thomas Stuefe
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: