8293492: ShenandoahControlThread missing from hs-err log and thread dump

Reviewed-by: phh
Backport-of: 85ec1f8d020cf2a9d7dfcc9ed75e43f0cd61c1f2